--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "chalk": "^2.4.2",
     "discord.js": "github:discordjs/discord.js#master",
     "easy-hastebin": "^1.1.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.2"
   }
 }
