--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.2",
+    "dblapi.js": "^2.3.0",
     "discord.js": "github:discordjs/discord.js#master",
     "easy-hastebin": "^1.1.1",
     "moment": "^2.24.0",
