--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.2",
     "dblapi.js": "^2.3.0",
     "discord.js": "github:discordjs/discord.js#master",
     "dotenv": "^7.0.0",
     "easy-hastebin": "^1.1.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2"
-  },
-  "devDependencies": {
-    "chalk": "^2.4.2"
   }
 }
